--- a/package.json
+++ b/package.json
@@ -48,10 +48,12 @@
     "embla-carousel-react": "^8.5.1",
     "firebase": "^11.1.0",
     "isomorphic-dompurify": "^2.19.0",
+    "jspdf": "^3.0.0",
     "lucide-react": "^0.468.0",
     "next": "15.1.0",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
+    "qrcode": "^1.5.4",
     "react": "^18.2.0",
     "react-datepicker": "^7.5.0",
     "react-day-picker": "^8.10.1",
