--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "isomorphic-dompurify": "^2.19.0",
     "jspdf": "^3.0.0",
     "lucide-react": "^0.468.0",
-    "next": "15.1.0",
+    "next": "^15.2.2",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
     "qrcode": "^1.5.4",
