--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@stripe/react-stripe-js": "^3.1.1",
     "@stripe/stripe-js": "^5.6.0",
     "@tanstack/react-query": "^5.62.7",
+    "@types/mapbox-gl": "^3.4.1",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
@@ -50,6 +51,7 @@
     "isomorphic-dompurify": "^2.19.0",
     "jspdf": "^3.0.0",
     "lucide-react": "^0.468.0",
+    "mapbox-gl": "^3.10.0",
     "next": "15.1.0",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
@@ -60,6 +62,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
     "react-intl": "^7.1.6",
+    "react-map-gl": "^7.0.25",
     "react-scrollspy": "^3.4.3",
     "sendbird": "^3.1.33",
     "shadcn": "^2.1.8",
