--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@formatjs/intl-displaynames": "^6.8.10",
     "@headlessui/react": "^2.2.0",
     "@hookform/resolvers": "^3.9.1",
+    "@netlify/plugin-nextjs": "^5.11.2",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-aspect-ratio": "^1.1.1",
